--- a/views/index.njk
+++ b/views/index.njk
@@ -6,6 +6,7 @@
         <link rel="icon" href="favicon.ico">
         <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;700&family=Roboto:wght@300;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="responsive.css">
         <script src="https://kit.fontawesome.com/5f3b47165c.js" crossorigin="anonymous"></script>
         <title>Discover The Cosmos</title>
     </head>
@@ -58,7 +59,7 @@
             </div>
             <div class="lottie">
                 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-                <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_t1NDLE.json" background="transparent" speed="1" style="width: 400px; height: 400px;" loop="loop" autoplay="autoplay"></lottie-player>
+                <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_t1NDLE.json" background="transparent" speed="1" style="width: 350px; height: 350px;" loop="loop" autoplay="autoplay"></lottie-player>
             </div>
         </footer>
 
