--- a/views/index.njk
+++ b/views/index.njk
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;700&family=Roboto:wght@300;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive.css">
+        <meta name="description" content="Uma imagem sobre astronomia e ciência espacial diferente todos os dias, juntamente com uma breve explicação.">
         <script src="https://kit.fontawesome.com/5f3b47165c.js" crossorigin="anonymous"></script>
         <title>Discover The Cosmos</title>
     </head>
