--- a/views/index.njk
+++ b/views/index.njk
@@ -24,7 +24,7 @@
                 </div>
                 <div class="titulo-e-data">
                     <h2>{{apod.title}}</h2>
-                    <span>Data:
+                    <span>Date:
                         {{apod.date}}</span>
                 </div>
                 <div class="img-e-explan">
